# Work-Force-360

./: main.py  pyproject.toml
.history/: main_20251106090529.py  main_20251106090654.py  main_20251106090709.py  main_20251106090710.py  main_20251106090924.py  main_20251106090950.py  main_20251106091249.py  main_20251106091300.py  main_20251106091617.py  main_20251106091636.py  main_20251106091648.py  main_20251106091709.py  main_20251106091728.py  main_20251106091744.py  main_20251106091813.py  main_20251106091918.py  main_20251106092232.py  main_20251106092259.py  main_20251106092310.py  main_20251106092326.py  main_20251106092455.py  main_20251106092514.py  main_20251106092522.py  main_20251106092528.py  main_20251106092532.py  main_20251106110324.py  main_20251106110853.py  main_20251106111102.py  main_20251106125246.py  main_20251106125941.py  main_20251106130436.py  main_20251106130605.py  main_20251106130623.py  main_20251106130652.py  main_20251106130656.py  main_20251106130750.py  main_20251106130907.py  main_20251106131339.py  main_20251106131357.py
.history/frontend/: index_20250919130519.html  index_20251011080223.html  index_20251011080228.html  index_20251011080237.html  index_20251011080341.html  index_20251011080414.html  index_20251011080441.html  index_20251011080517.html  index_20251011080553.html
app/api/v1/routes/: auth.py  job.py  user.py
app/core/: config.py  database.py  security.py
app/models/: job_model.py  user_model.py
app/schemas/: job_schema.py  user_schema.py
app/utils/: response.py
frontend/: index.html
